# VulkanTest

./: CMakeLists.txt  CMakePresets.json  compile.sh
res/shaders/: shader.vert
src/: main.cpp
